Fixed relative objects inside widgets from being cutoff by the widget bounds. Close #5

--- a/app/assets/stylesheets/custom_classes/_widgets.scss
+++ b/app/assets/stylesheets/custom_classes/_widgets.scss
@@ -8,7 +8,6 @@
 	@include box-shadow(0 2px 2px rgba($widgetBordersColor, .5));
 	margin-bottom: 20px;
 	position: relative;
-	overflow: auto;
 }
 
 // The header
